updated site template files

--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -1,11 +1,11 @@
-description "Gunicorn server for testinggoat-mr-staging.nrgpl.us"
+description "Gunicorn server for SITENAME"
 
 start on net-device-up
 stop on shutdown
 
 respawn
 
-chdir /home/ec2-user/sites/testinggoat-mr-staging.nrgpl.us/source
+chdir /home/ec2-user/sites/SITENAME/source
 exec ../virtualenv/bin/gunicorn \
-    --bind unix:/tmp/testinggoat-mr-staging.nrgpl.us.socket \
+    --bind unix:/tmp/SITENAME.socket \
     superlists.wsgi:application
